--- a/src/comp/testcontent/css/SelfStyle.css
+++ b/src/comp/testcontent/css/SelfStyle.css
@@ -7,6 +7,7 @@
     color: white;
     font-family: 'Yeseva One', cursive;
     /* font-family: Arial, Helvetica, sans-serif; */
+    padding-top: 0px;
 }
 
 
