added spanish option and double check spaces from bold also call numbers are in list

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,7 @@ body {
 
 .Self_head1 {
   padding-top: 10px;
+  padding-bottom: 10px;
   font-size: min(30px,7vw);
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
